# talkie

./: README.md  pubspec.yaml
android/: build.gradle
android/src/main/: AndroidManifest.xml
android/src/main/java/com/ucchip/sdk/codec/talkie/: TalkieCodec.java  TalkiePlugin.java
android/src/main/jniLibs/: CMakeLists.txt  flutter_talkie_codec.cpp
android/src/test/java/com/ucchip/sdk/codec/talkie/: TalkiePluginTest.java
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/java/com/ucchip/sdk/codec/talkie_example/: MainActivity.java
example/android/gradle/wrapper/: gradle-wrapper.properties
example/integration_test/: plugin_integration_test.dart
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/ios/RunnerTests/: RunnerTests.swift
example/lib/: main.dart
example/test/: widget_test.dart
ios/: talkie.podspec
ios/Classes/: TalkieBridge.h  TalkieBridge.mm  TalkieCodec.swift  TalkiePlugin.h  TalkiePlugin.m  TalkiePlugin.mm  TalkiePlugin.swift
ios/Classes/libs/: libTalkie.h  talkie.h
lib/: talkie.dart  talkie_method_channel.dart  talkie_platform_interface.dart
test/: talkie_method_channel_test.dart  talkie_test.dart
